--- a/etc/200801 Coding Test.ipynb
+++ b/etc/200801 Coding Test.ipynb
@@ -386,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. 유효 데이터 복사하기 (미완)\n",
+    "## 6. 유효 데이터 복사하기\n",
     "1) 메모리 상에 있는 데이터를 유효한 데이터만 남겨두고 정리하려고 한다. 아래 규칙을 따르는 데이터가 공간 A에 있다고 가정할 때 유효 데이터를 차례대로 새 공간 B에 옮기는 코드를 작성해라.\n",
     "<br><br>\n",
     "2) 규칙\n",
@@ -395,15 +395,95 @@
     "    - 각 공간의 크기와 별개로 공간의 가장 앞 자리에는 해당 공간의 첫 유효한 데이터의 주소를 나타내는 Starting Pointer가 들어간다.\n",
     "    - 하나의 데이터는 크기가 항상 2이며 첫 번째 자리에는 데이터의 형식, 두 번째 자리에는 그 값이 들어간다.\n",
     "    - 각 포인터가 가리키는 대상 데이터는 유효한 데이터이므로 새로운 공간으로 옮겨져야 한다.\n",
-    "    "
+    "    - 새로운 공간의 Starting Pointer는 항상 0이다.\n",
+    "    - 새로운 공간으로 옮겨질 떄는 각 유효 테이터가 기존 공간에서 유효한 데이터의 순서대로 새로운 공간에 연속적인 공간에 놓여져야 하며, 남는 공간이 있다면 0으로 채워야한다.\n",
+    "<br><br>\n",
+    "3) 데이터\n",
+    "    - 첫 자리에 0이면 그 다음 자리는 포인터를 의미\n",
+    "        ex: 0 6 > 주소 6을 나타내는 포인터\n",
+    "    - 첫 자리에 1이면 그 다음 자리는 숫가 값를 의미\n",
+    "        ex: 1 30 > 숫자 값 30\n",
+    "<br><br>\n",
+    "4) 예제<br><br>\n",
+    "1. input : \n",
+    "```4; 1 30 0 6 0 2 1 3```\n",
+    "2. Starting Pointer 4는 주소 4를 가리킨다. \n",
+    "- 주소 4의 데이터는 유효하기에 (0 2) 는 유효, 0으로 시작하기에 2는 포인터<br>\n",
+    "```4; 1 30 0 6 (0 2) 1 3```\n",
+    "- 주소 2의 데이터는 유효하기에 (0 6) 은 유효, 0으로 시작하기에 6은 포인터<br>\n",
+    "```4; 1 30 (0 6) (0 2) 1 3```\n",
+    "- 주소 6의 데이터는 유효하기에 (1 3) 은 유효, 1로 시작하기에 3은 숫자 값<br>\n",
+    "```4; 1 30 (0 6) (0 2) (1 3)```\n",
+    "- 더 이상 유효 데이터가 없으므로 새 공간에 차례로 옮긴다.\n",
+    "<br>\n",
+    "- 새 공간의 Staring Pointer는 항상 0이므로 첫 유효 데이터 (0 2)를 주소 0, 1 위치로 옮긴다.<br>\n",
+    "```0; 0 2```\n",
+    "- 두 번째 유효 데이터 (0 6)을 주소 2, 3에 복사하고, 이 유효 데이터는 포인터이므로 다음 세 번째 유효 데이터를 가리키도록 (0 4)로 변경한다.<br>\n",
+    "```0; 0 2 0 4```\n",
+    "- 마지막 세 번째 유효 데이터는 (1 3)으로 주소 4, 5에 복사하고 남은 주소 6, 7에는 0을 채운다.<br>\n",
+    "```0; 0 2 0 4 1 3 0 0```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user_input = \"4; 1 30 0 6 0 2 1 3\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data_type:  0 data_value:  2 counter:  1\n",
+      "data_type:  0 data_value:  6 counter:  2\n",
+      "data_type:  1 data_value:  30 counter:  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "pointer = int(user_input[0])\n",
+    "data = list(map(int, user_input[3:].split(\" \")))\n",
+    "\n",
+    "data_type = 0\n",
+    "data_value = 0\n",
+    "counter = 0\n",
+    "new_place = [0,0,0,0,0,0,0,0]\n",
+    "\n",
+    "while data_type == 0:\n",
+    "    data_type = data[pointer]\n",
+    "    data_value = data[pointer + 1]\n",
+    "    if data_type == 0:\n",
+    "        pointer = data_value\n",
+    "        counter += 1\n",
+    "    print(\"data_type: \", data_type, \"data_value: \", data_value, \"counter: \", counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = 1\n",
+    "for i in range(counter):\n",
+    "    new_place[idx] = idx+1\n",
+    "    idx += 2\n",
+    "    \n",
+    "new_place[idx-1] = 1\n",
+    "new_place[idx] = data_value\n",
+    "new_place = list(map(str, new_place))\n",
+    "answer = \" \".join(new_place)\n",
+    "answer = \"0; \" + answer\n",
+    "print(answer)"
+   ]
   }
  ],
  "metadata": {
