--- a/python/programmers/quiz/[NoComplete]programmers_Summer&WinterCoding_UnscathedRectangle.ipynb
+++ b/python/programmers/quiz/[NoComplete]programmers_Summer&WinterCoding_UnscathedRectangle.ipynb
@@ -6,60 +6,67 @@
    "source": [
     "# 프로그래머스 문제\n",
     "\n",
-    "## 8. 스킬트리\n",
-    "- 선행 스킬 순서 skill과 유저들이 만든 스킬트리가 담긴 skill_trees가 주어질 때 가능한 스킬트리를 선택한 유저의 수를 출력하다.\n",
+    "## 9. 소수만들기\n",
+    "- 여러 숫자가 들어있는 배열 nums가 주어질 때, nums 내에서 나올 수 있는 3개의 숫자 조합의 합이 소수가 되는 경우의 수를 구하시오.\n",
     " \n",
     "### 제한사항\n",
-    "- 모두 알파벳 대문자로 되어있다.\n",
-    "- 스킬은 중복되지 않는다.\n",
-    "- skill_trees의 원소는 2 이상 26 이하이다."
+    "- nums에는 중복된 숫자가 들어가지 않습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "홀 짝 (개수)<br>\n",
+    "0 | 3 > 2로 나눠짐 > 소수 불가<br>\n",
+    "1 | 2 > 가능<br>\n",
+    "2 | 1 > 2로 나눠짐 > 소수 불가<br>\n",
+    "3 | 0 > 가능<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "skill = \"CBD\"\n",
-    "skill_trees = [\"BACDE\", \"CBADF\", \"AECB\", \"BDA\"]"
+    "w = 4\n",
+    "h = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "answer = 0\n",
-    "for tree in skill_trees:\n",
-    "    no_skill = len(tree)+1\n",
-    "    one_user = [tree.find(s) if tree.find(s)!=-1 else no_skill for s in skill]\n",
-    "    for i in range(1, len(one_user)):\n",
-    "        if max(one_user[:i]) > one_user[i]:\n",
-    "            break\n",
-    "    else:\n",
-    "        answer += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "12"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "if w == h:\n",
+    "    answer = w*h-w\n",
     "answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (w%2 == 0):\n",
+    "    if (h%2 == 0):\n",
+    "        answer = w*h-min(w, h)*2\n",
+    "\n",
+    "    "
    ]
   }
  ],
