--- a/SQL/programmers/TIL/SQL 고득점 kit.ipynb
+++ b/SQL/programmers/TIL/SQL 고득점 kit.ipynb
@@ -23,6 +23,38 @@
     "FROM B\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. MIN/MAX\n",
+    "## 1) 전체의 MIN/MAX 값 찾기 : GROUP BY 사용X\n",
+    "- mySQL\n",
+    "```\n",
+    "SELECT MAX(A)\n",
+    "FROM B\n",
+    "```\n",
+    "- Oracle : AS 안쓰기, \"\" 사용\n",
+    "```\n",
+    "SELECT MAX(DATETIME) \"시간\"\n",
+    "FROM ANIMAL_INS\n",
+    "```\n",
+    "\n",
+    "## 2) 각 그룹에서 MIN/MAX 값 찾기 : GROUP BY 사용O\n",
+    "- mySQL\n",
+    "```\n",
+    "SELECT MAX(A) AS '시간'\n",
+    "FROM B\n",
+    "GROUP BY A\n",
+    "```\n",
+    "- Oracle\n",
+    "```\n",
+    "SELECT MAX(DATETIME) \"시간\"\n",
+    "FROM ANIMAL_INS\n",
+    "GROUP BY A\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
