--- a/SQL/programmers/TIL/SQL 고득점 kit.ipynb
+++ b/SQL/programmers/TIL/SQL 고득점 kit.ipynb
@@ -55,6 +55,28 @@
     "GROUP BY A\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. DISTINCT\n",
+    "- mySQL\n",
+    "```\n",
+    "SELECT COUNT(DISTINCT(A))\n",
+    "```\n",
+    "- Oracle\n",
+    "```\n",
+    "SELECT COUNT(DISTINCT A)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
