--- a/python/baekjoon/DFS&BFS.ipynb
+++ b/python/baekjoon/DFS&BFS.ipynb
@@ -114,22 +114,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "010\n",
-      "101\n",
-      "010\n",
-      "4\n",
+      "5\n",
+      "10101\n",
+      "00000\n",
+      "10101\n",
+      "10101\n",
+      "01010\n",
+      "8\n",
       "1\n",
       "1\n",
       "1\n",
-      "1\n"
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "2\n"
      ]
     }
    ],
@@ -170,12 +176,24 @@
     "\n",
     "print(seq)\n",
     "count_house = 0\n",
+    "result = list()\n",
     "for s in range(1, seq+1):\n",
     "    for t in maps:\n",
     "        count_house += t.count(s)\n",
-    "    print(count_house)\n",
-    "    count_house = 0"
+    "    result.append(count_house)\n",
+    "    count_house = 0\n",
+    "\n",
+    "result.sort()       \n",
+    "for c in result:\n",
+    "    print(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
