--- a/python/programmers/quiz/programmers_stack&queue_truck passing bridge.ipynb
+++ b/python/programmers/quiz/programmers_stack&queue_truck passing bridge.ipynb
@@ -18,174 +18,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bridge_length = 2\n",
-    "weight = 10\n",
-    "truck_weights = [7,4,5,6]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def time_to_exit(truck_dict, passing, time, bridge_length):\n",
-    "    if truck_dict[passing[0]]%bridge_length == 0:\n",
-    "        print(\"나옴\", time%bridge_length)\n",
-    "        passing.popleft()\n",
-    "        return True\n",
-    "    else: return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{7: 0, 4: 0, 5: 0, 6: 0}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "truck_dict = {t:0 for t in truck_weights}\n",
-    "truck_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "ExecuteTime": {
+     "end_time": "2020-12-18T08:03:40.316401Z",
+     "start_time": "2020-12-18T08:03:35.396557Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{7: 1, 4: 1, 5: 0, 6: 0}\n",
-      "deque([4]) 1\n",
-      "{7: 1, 4: 1, 5: 1, 6: 0}\n",
-      "deque([4, 5]) 2\n",
-      "{7: 1, 4: 1, 5: 1, 6: 1}\n",
-      "deque([6]) 3\n"
+      "2\n",
+      "10\n",
+      "7 4 5 6\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from collections import deque\n",
-    "\n",
-    "passing = deque()\n",
-    "time = 0\n",
-    "\n",
-    "truck_weights = deque(truck_weights)\n",
-    "for i in range(len(truck_weights)):\n",
-    "    time += 1\n",
-    "    enter = truck_weights.popleft()\n",
-    "    passing.append(enter)\n",
-    "    truck_dict[enter] += 1\n",
-    "    print(truck_dict)\n",
-    "    print(passing, time)\n",
-    "    time_to_exit(truck_dict, passing, time, bridge_length)\n",
-    "    while (truck_weights) and (sum(passing)+truck_weights[0] > weight):\n",
-    "        while(time_to_exit(truck_dict, passing, time, bridge_length)):\n",
-    "            print(\"시간 더함\", time)\n",
-    "            time += 1\n",
-    "        passing.popleft()\n",
-    "        \n",
-    "        \n",
-    "time += time%bridge_length\n",
-    "        \n",
-    "time"
+    "bridge_length = int(input())\n",
+    "weight = int(input())\n",
+    "truck_weights = list(map(int, input().split()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bridge_length = 2\n",
-    "weight = 10\n",
-    "truck_weights = [7,4,5,6]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-18T09:00:33.181774Z",
+     "start_time": "2020-12-18T09:00:33.165816Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{7: 0, 4: 0, 5: 0, 6: 0}\n",
-      "{7: 1, 4: 0, 5: 0, 6: 0}\n",
-      "{7: 2, 4: 1, 5: 0, 6: 0}\n"
+      "시작 {0: 0, 1: 0, 2: 0, 3: 0}, passing deque([])\n",
+      "1번 if\n",
+      "2번 else\n",
+      "시작 {0: 1, 1: 0, 2: 0, 3: 0}, passing deque([(0, 7)])\n",
+      "1번 else\n",
+      "2번 if\n",
+      "while\n",
+      "나감\n",
+      "시작 {0: 2, 1: 0, 2: 0, 3: 0}, passing deque([])\n",
+      "1번 if\n",
+      "2번 else\n",
+      "시작 {0: 2, 1: 0, 2: 1, 3: 0}, passing deque([(2, 5)])\n",
+      "1번 else\n",
+      "2번 if\n",
+      "while\n",
+      "나감\n",
+      "결과 4\n"
      ]
     }
    ],
    "source": [
     "from collections import deque\n",
     "\n",
-    "truck_dict = {t:0 for t in truck_weights}\n",
+    "time = 0\n",
+    "passing = deque()\n",
+    "truck_time = {i:0 for i in range(len(truck_weights))}\n",
     "truck_weights = deque(truck_weights)\n",
-    "in_bridge = deque()\n",
-    "total_time = 0\n",
+    "isAppend = True\n",
+    "passing_sum = 0\n",
     "\n",
-    "while (len(truck_weights) != 1):\n",
-    "    total_time += 1\n",
-    "    print(truck_dict)\n",
-    "    for truck in truck_dict:\n",
-    "        if truck_dict[truck] >= 1:\n",
-    "            truck_dict[truck] += 1\n",
-    "    if in_bridge and (truck_dict[in_bridge[0]] >= bridge_length):\n",
-    "        in_bridge.popleft()\n",
-    "    \n",
-    "    if sum(in_bridge) + truck_weights[0] <= weight:\n",
-    "        next_truck = truck_weights.popleft()\n",
-    "        truck_dict[next_truck] += 1\n",
-    "        in_bridge.append(next_truck)"
+    "for idx, t in enumerate(truck_weights):\n",
+    "    print(f\"시작 {truck_time}, passing {passing}\")\n",
+    "    # 들어갈 수 있는지 체크\n",
+    "    if passing_sum + t <= weight:\n",
+    "        print(\"1번 if\")\n",
+    "        passing.append((idx, t))\n",
+    "        passing_sum += t\n",
+    "        isAppend = True\n",
+    "    else:\n",
+    "        print(\"1번 else\")\n",
+    "        isAppend = False\n",
+    "        \n",
+    "    if not isAppend:\n",
+    "        print(\"2번 if\")\n",
+    "        while truck_time[passing[0][0]] != bridge_length:\n",
+    "            print(\"while\")\n",
+    "            time += 1\n",
+    "            for i in passing:\n",
+    "                truck_time[i[0]] += 1\n",
+    "    else:\n",
+    "        print(\"2번 else\")\n",
+    "        time += 1\n",
+    "        for i in passing:\n",
+    "            truck_time[i[0]] += 1\n",
+    "    if truck_time[passing[0][0]] == bridge_length:\n",
+    "        print(\"나감\")\n",
+    "        out = passing.popleft()\n",
+    "        passing_sum -= out[1]\n",
+    "print(\"결과\", time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-18T08:47:35.465621Z",
+     "start_time": "2020-12-18T08:47:35.458641Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "{0: 5, 1: 0, 2: 0, 3: 0}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_time"
+    "truck_time"
    ]
   },
   {
@@ -193,7 +147,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sum + t <= w 면 들어감\n",
+    "\n",
+    "1. 들어갔고, 안나옴 > 다음 체크 > 다음 for\n",
+    "\n",
+    "2. 안들어갔고, 안나옴 > 시간 더 흐르기 > while 나올 때까지 시간 ++\n",
+    "\n",
+    "3. 들어갔고, 나옴 > 다음 체크 > 다음 for\n",
+    "\n",
+    "4. 안들어갔고, 나옴 > 다시 체크 > "
+   ]
   }
  ],
  "metadata": {
@@ -213,6 +177,48 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
