--- a/SQL/programmers/TIL/SQL 고득점 kit.ipynb
+++ b/SQL/programmers/TIL/SQL 고득점 kit.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. 상위 n개 추출\n",
+    "# 상위 n개 추출\n",
     "- mySQL\n",
     "```\n",
     "SELECT A\n",
@@ -28,8 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. MIN/MAX\n",
-    "## 1) 전체의 MIN/MAX 값 찾기 : GROUP BY 사용X\n",
+    "# MIN/MAX\n",
+    "## 전체의 MIN/MAX 값 찾기 : GROUP BY 사용X\n",
     "- mySQL\n",
     "```\n",
     "SELECT MAX(A)\n",
@@ -41,7 +41,7 @@
     "FROM ANIMAL_INS\n",
     "```\n",
     "\n",
-    "## 2) 각 그룹에서 MIN/MAX 값 찾기 : GROUP BY 사용O\n",
+    "## 각 그룹에서 MIN/MAX 값 찾기 : GROUP BY 사용O\n",
     "- mySQL\n",
     "```\n",
     "SELECT MAX(A) AS '시간'\n",
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. DISTINCT\n",
+    "# DISTINCT\n",
     "- mySQL\n",
     "```\n",
     "SELECT COUNT(DISTINCT(A))\n",
@@ -69,6 +69,29 @@
     "```\n",
     "SELECT COUNT(DISTINCT A)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BETWEEN, IN, LIKE, IS NULL, IS NOT NULL\n",
+    "- WHERE AGE BETWEEN a AND b\n",
+    "- WHERE NAME IN ('A','B','C')\n",
+    "- WHERE NAME LIKE '%검색어\n",
+    "- WHERE NAME IS (NOT) NULL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DATETIME 함수\n",
+    "- dayofweek(date) : 날짜를 한 주의 몇 번째 (1 = 일요일, 2 = 월요일, ... 7 = 토요일)\n",
+    "- weekday(date) : 날짜를 한 주의 몇 번째 (0 = 월요일, 1=화요일 ... 6 = 일요일)\n",
+    "- HOUR(DATETIME 형식인 컬럼) : DATETIME 중 HOUR만 사용\n",
+    "\n",
+    "출처 : https://jang8584.tistory.com/7"
    ]
   },
   {
@@ -96,6 +119,48 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
