--- a/team_note.ipynb
+++ b/team_note.ipynb
@@ -139,7 +139,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-24T07:47:25.702358Z",
      "start_time": "2020-12-24T07:47:25.693378Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -161,6 +162,212 @@
     "for i in a[:]:\n",
     "    print(i)\n",
     "    a.remove(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## map과 lambda로 list 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = [1, 5, 2, 6, 3, 7, 4]\n",
+    "commands = [[2, 5, 3], [4, 4, 1], [1, 7, 3]]\n",
+    "\n",
+    "answer = list(map(lambda x:sorted(array[x[0]-1:x[1]])[x[2]-1], commands))\n",
+    "answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 순열과 조합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-31T04:07:12.410871Z",
+     "start_time": "2020-12-31T04:07:12.400900Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AB AC BA BC CA CB "
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "chars = ['A', 'B', 'C']\n",
+    "\n",
+    "perm = itertools.permutations(chars, 2)  # 순열\n",
+    "comb = itertools.combinations(chars, 2)  # 조합\n",
+    "\n",
+    "# print(list(perm))\n",
+    "# print(list(comb))\n",
+    "\n",
+    "for p in perm:\n",
+    "    print(\"\".join(p), end=\" \")\n",
+    "\n",
+    "# print()\n",
+    "# for c in comb:\n",
+    "#     print(\"\".join(c), end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## list to string\n",
+    "### join str list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-31T03:55:55.461352Z",
+     "start_time": "2020-12-31T03:55:55.454370Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "A B C\n"
+     ]
+    }
+   ],
+   "source": [
+    "chars = ['A', 'B', 'C']\n",
+    "print(\"\".join(chars))\n",
+    "print(\" \".join(chars))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### join int list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-31T05:56:42.276460Z",
+     "start_time": "2020-12-31T05:56:42.268481Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, 0, 1, 3, 4, 5, 9]\n",
+      "-1013459\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_list = [-1, 0, 1, 3, 4, 5, 9]\n",
+    "\n",
+    "print(num_list)\n",
+    "print(\"\".join(map(str, num_list)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## list 빼기 list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### map과 lambda 이용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-05T02:32:16.614361Z",
+     "start_time": "2021-01-05T02:32:16.604389Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 1, 0]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1, 1, 1]\n",
+    "b = [3, 2, 1]\n",
+    "list(map(lambda x, y: x-y, b, a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### zip 이용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-07T10:53:37.280290Z",
+     "start_time": "2021-01-07T10:53:37.273312Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3\n",
+      "1 2\n",
+      "1 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 1, 1]\n",
+    "b = [3, 2, 1]\n",
+    "for i, j in zip(a, b):\n",
+    "    print(i, j)"
    ]
   },
   {
@@ -236,7 +443,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-18T07:29:55.797136Z",
      "start_time": "2020-12-18T07:29:53.993926Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -253,11 +461,172 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 에라토스테네스의 체(소수구하기)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-22T05:52:54.188012Z",
+     "start_time": "2021-01-22T05:52:54.176046Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3, 7, 23), (3, 11, 19), (3, 13, 17), (5, 11, 17)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "n = 33\n",
+    "\n",
+    "is_prime = [True] * (n+1)\n",
+    "is_prime[0] = False\n",
+    "is_prime[1] = False\n",
+    "\n",
+    "for candidate in range(2, n+1):\n",
+    "    if not is_prime[candidate]:\n",
+    "        continue\n",
+    "    for multiply in range(candidate*candidate, n+1, candidate):\n",
+    "        is_prime[multiply] = False\n",
+    "\n",
+    "prime_pair = list(itertools.combinations([idx for idx, val in enumerate(is_prime) if val], 3))\n",
+    "answer = [pair for pair in prime_pair if sum(pair) == n]\n",
+    "print(answer)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sorting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 사용자 정의 함수로 sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-30T01:51:00.214785Z",
+     "start_time": "2021-01-30T01:51:00.201800Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['9', '3', '30', '300', '1']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from functools import cmp_to_key\n",
+    "\n",
+    "def compare(a, b):\n",
+    "    return -1 if a+b > b+a else 1\n",
+    "\n",
+    "a = [1,3, 30, 300, 9]\n",
+    "a = list(map(str, a))\n",
+    "a.sort(key=cmp_to_key(compare))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# map, Filter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-30T03:01:22.037847Z",
+     "start_time": "2021-01-30T03:01:22.012914Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "a_list = list(map(str, a))\n",
+    "a_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-30T03:02:26.718755Z",
+     "start_time": "2021-01-30T03:02:26.708783Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 5]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5]\n",
+    "a_filtered = list(filter(lambda x: x > 3, a))\n",
+    "a_filtered"
+   ]
   }
  ],
  "metadata": {
